--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<h3>I'm in the AppComponent!</h3>
+<div class="container"> 
+  <div class="row">
+    <div class="col-xs-12"></div>
+    <h3>I'm in the AppComponent!</h3>
+    <hr>
+    <app-server></app-server>
+  </div>
+</div>
+
+
+
